# Qt6Media

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
Forms/: Icons.h  clickableslider.h  player.cpp  player.h  player.ui
